--- a/app/src/main/res/layout/chats_page.xml
+++ b/app/src/main/res/layout/chats_page.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="16dp"
+    android:backgroundTint="@color/light_grey"
     android:orientation="vertical">
 
     <TextView
