--- a/app/src/main/res/layout/activity_room.xml
+++ b/app/src/main/res/layout/activity_room.xml
@@ -42,6 +42,7 @@
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:id="@+id/chat"
+        android:paddingBottom="10dp"
         android:background="@color/light_grey" >
 
         <LinearLayout
