--- a/app/src/main/res/layout/chats_page.xml
+++ b/app/src/main/res/layout/chats_page.xml
@@ -1,20 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="16dp"
     android:backgroundTint="@color/light_grey"
     android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/HelloText"
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="0"
-        android:gravity="center"
-        android:textSize="30dp"
+        android:layout_weight="0">
 
-        android:text="Hello there." />
+        <TextView
+            android:id="@+id/HelloText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:gravity="start|center_vertical"
+            android:layout_centerVertical="true"
+            android:text="Hello there."
+            android:textSize="30dp" />
+
+        <ImageButton
+            android:id="@+id/settingsButton"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:padding="5dp"
+            android:layout_alignParentEnd="true"
+            android:scaleType="fitCenter"
+            android:src="@drawable/settings"
+            android:background="@null" />
+    </RelativeLayout>
 
     <ScrollView
         android:layout_width="match_parent"
