--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -64,6 +64,29 @@
         </LinearLayout>
 
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/imageView"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:src="@drawable/settings" />
+
+            <Button
+                android:id="@+id/addPFPButton"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+
+                android:layout_marginHorizontal="27dp"
+                android:backgroundTint="@color/black"
+                android:text="Add Profile Picture" />
+        </LinearLayout>
+
         <Button
             android:id="@+id/signOutButton"
             android:layout_width="match_parent"
@@ -73,6 +96,7 @@
             android:layout_marginHorizontal="27dp"
             android:backgroundTint="@color/black"
             android:text="Sign Out" />
+
     </LinearLayout>
 
 
